[package]
name = "yamcha"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "*" }
fast_qr = {version = "*", features = ["image"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }